delete and edit feed

--- a/component/postComponent.html
+++ b/component/postComponent.html
@@ -91,4 +91,23 @@
     </div>
     </li>
     </ul>
+     <!--Edit modal pop up  -->
+     <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="editModalLabel">Edit Post</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <input class="form-control" ng-model="editedContent" type="text">
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" ng-click="saveChanges()" data-bs-dismiss="modal">Save
+              changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
     </div>
