--- a/views/feed.html
+++ b/views/feed.html
@@ -44,29 +44,11 @@
         <ul ng-repeat="singlePost in allPosts | orderBy: 'created_at':true ">
           <li>
             <!-- component directive -->
-        <post-component data="singlePost"></post-component>
+        <post-component data="singlePost" all-posts="allPosts"></post-component>
        
         </li>
         </ul>
-        <!--Edit modal pop up  -->
-        <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="editModalLabel">Edit Post</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <input class="form-control" ng-value="allPosts[id].messg" ng-model="editedContent" type="text">
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" ng-click="saveChanges()" data-bs-dismiss="modal">Save
-                  changes</button>
-              </div>
-            </div>
-          </div>
-        </div>
+       
       </div>
       <div class="col-3 sidebar-second"></div>
     </div>
