--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,9 @@
     .content {
       color: #000; 
     }
+    .rahul{
+      color:red;
+    }
     .content1{
       position:fixed;
       width: 100%;
