--- a/component/postComponent.html
+++ b/component/postComponent.html
@@ -100,7 +100,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <input class="form-control" ng-model="editedContent" type="text">
+            <input class="form-control" ng-model="editedContent" ng-value="allPosts[allPosts.id].messg" type="text">{{allPosts.id}}
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
