--- a/frontendSocialFeed/component/postComponent.html
+++ b/frontendSocialFeed/component/postComponent.html
@@ -1,7 +1,7 @@
 <div class="row card mt-4 custom-card">
     <div class="card-header row">
     <div class="col-2"><img class="image" src="img/graduated.png" alt="not found" /></div>
-    <div class="col-7 name"><span ng-model="name">{{data.name}}</span></div>
+    <div class="col-7 name"><span ng-model="name">{{data.user_name}}</span></div>
     <div class="dropdown col-3">
     <button class="btn dp dropdown-toggle" type="button" id="dropdownMenuButton"
     data-bs-toggle="dropdown" aria-expanded="false">
@@ -17,8 +17,8 @@
     </div>
     <!-- FEED CONTENT -->
     <div class="card-body">
-    <p id="content" class="card-text" ng-show="!editMode">{{data.messg }}</p>
-    <p class="posted">{{ data.posted | timeAgo }}</p>
+    <p id="content" class="card-text" ng-show="!editMode">{{data.description }}</p>
+    <p class="posted">{{ data.posted_time | timeAgo }}</p>
     <input id="contentInput" class="card-text" ng-show="editMode" ng-model="editedContent" type="text">
     </div>
     <!-- options LIKE DISLIKE COMMENT SHARE -->
@@ -101,11 +101,11 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <input class="form-control" ng-model="editedContent" ng-value="allPosts[allPosts.id].messg" type="text">
+            <input class="form-control" ng-model="editedContent" ng-value="allPosts[allPosts.id].description" type="text">
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" ng-click="saveChanges()" data-bs-dismiss="modal">Save
+            <button type="button" class="btn btn-primary" ng-click="saveChanges(data)" data-bs-dismiss="modal">Save
               changes</button>
           </div>
         </div>
