--- a/frontendSocialFeed/component/postComponent.html
+++ b/frontendSocialFeed/component/postComponent.html
@@ -60,10 +60,10 @@
     </div>
     <!-- list of comments -->
     <ul>
-    <li class="list-comment" ng-repeat="singleComment in data.comments | orderBy: 'created_at':true">
-    <div class="row">
+    <li class="list-comment" ng-repeat="singleComment in commentArr | orderBy: 'created_at':true">
+    <div class="row" ng-if="singleComment.post_id === data.id">
     <div class="col-9">
-    <p class=commentList ng-show="!singleComment.editMode">{{singleComment.content }}</p>
+    <p class=commentList ng-show="!singleComment.editMode">{{singleComment.description}}</p>
     <input class="commentInput" ng-show="singleComment.editMode" ng-model="singleComment.editedComment"
       type="text">
     </div>
@@ -102,6 +102,7 @@
           </div>
           <div class="modal-body">
             <input class="form-control" ng-model="editedContent" ng-value="allPosts[allPosts.id].description" type="text">
+            {{allPosts[allPosts.id].description}}
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
