--- a/frontendSocialFeed/views/feed.html
+++ b/frontendSocialFeed/views/feed.html
@@ -95,6 +95,7 @@
           <post-component
             data="singlePost"
             all-posts="allPosts"
+            on-data-updated="handleDataFromChild(data)"
           ></post-component>
         </li>
       </ul>
