changes error response

--- a/frontendSocialFeed/css/index.css
+++ b/frontendSocialFeed/css/index.css
@@ -95,7 +95,7 @@
    
     .main{
       padding-top: 1rem;
-      background: #eee;
+      background:#ddd;
       margin-top: 2.5rem !important;
     }
     .menu {
