css added+ one api connection

--- a/frontendSocialFeed/component/postComponent.html
+++ b/frontendSocialFeed/component/postComponent.html
@@ -1,7 +1,7 @@
 <div class="row card mt-4 custom-card">
   <div class="card-header row">
     <div class="col-2">
-      <img class="image" src="img/graduated.png" alt="not found" />
+      <img class="image" src="img/facebook.png" alt="not found" />
     </div>
     <div class="col-7 name">
       <span ng-model="name">{{data.userName}}</span>
@@ -46,7 +46,7 @@
   <div class="row card-header">
     <ul class="nav nav-tabs card-header-tabs">
       <li class="nav-item nav" ng-click="incrementLike(data)">
-        <a class="nav-link hover"><i class="fas fa-thumbs-up"></i> Like</a>
+        <a class="nav-link hover"><i class="fas fa-heart"></i> Like</a>
       </li>
       <li class="nav-item nav" ng-click="decrementLike(data)">
         <a class="nav-link hover"><i class="fas fa-thumbs-down"></i> Dislike</a>
